--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -30,63 +30,44 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.2.1
-  provider: ^6.0.5 # Or the latest version
-  cupertino_icons: ^1.0.8
-  image_picker: ^1.1.2
-  http_parser: ^4.0.2 # Add this line!  (Use a recent version)
-  path_provider: ^2.0.0
-
+  cupertino_icons: ^1.0.5
+  provider: ^6.0.5
+  http: ^1.1.0
+  http_parser: ^4.0.2
+  path_provider: ^2.1.1
+  image_picker: ^1.0.4
+  cached_network_image: ^3.3.0
+  flutter_svg: ^2.0.7
+  intl: ^0.18.1
+  shimmer: ^3.0.0
+  flutter_markdown: ^0.6.17+1
+  url_launcher: ^6.1.14
+  shared_preferences: ^2.2.1
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^2.0.3
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
+# Flutter configuration
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+  # Assets
   assets:
-     - assets/images/logo.png
-     - assets/images/logoblack.png
+    - assets/images/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  # Fonts
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-Light.ttf
+          weight: 300
