--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,12 @@
-fastapi
 uvicorn
+fastapi
 psycopg2-binary
 SQLAlchemy
 python-dotenv
 pydantic
 passlib[bcrypt]
 bcrypt
+Pillow
+PyJWT
+python-multipart
+websockets
