--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -4,26 +4,26 @@ version: 1.0.0+1
 publish_to: 'none'
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.5
   provider: ^6.0.5
-  http: ^0.13.5
+  http: ^1.1.0
   http_parser: ^4.0.2
   path_provider: ^2.1.1
-  image_picker: ^0.8.7+5
-  shimmer: ^3.0.0
+  image_picker: ^1.0.4
+  cached_network_image: ^3.3.0
+  flutter_svg: ^2.0.7
   intl: ^0.18.1
-
-  # UI packages
-  cupertino_icons: ^1.0.2
-  google_fonts: ^4.0.4
-  flutter_svg: ^2.0.5
-  cached_network_image: ^3.2.3
-  lottie: ^2.4.0
-  flutter_staggered_animations: ^1.1.1
+  shimmer: ^3.0.0
+  flutter_markdown: ^0.6.17+1
+  url_launcher: ^6.1.14
+  shared_preferences: ^2.2.1
+  flutter_secure_storage: ^9.0.0
+  web_socket_channel: ^2.4.0 # For WebSocket communication
 
 dev_dependencies:
   flutter_test:
@@ -35,16 +35,17 @@ flutter:
 
   assets:
     - assets/images/
-    - assets/icons/
-    - assets/animations/
 
-fonts:
-  - family: Inter
-    fonts:
-      - asset: assets/fonts/Inter-Regular.ttf
-      - asset: assets/fonts/Inter-Medium.ttf
-        weight: 500
-      - asset: assets/fonts/Inter-SemiBold.ttf
-        weight: 600
-      - asset: assets/fonts/Inter-Bold.ttf
-        weight: 700
+  # Fonts
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-Light.ttf
+          weight: 300
