--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ backend/lib/
 backend/include/
 backend/lib64/
 backend/pycache/
+backend/src/__pycache__/
+backend/src/routers/__pycache__/
 backend/share/
 backend/var/
 backend/venv/
