--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+.env
+backend/bin/
+backend/lib/
+backend/include/
+backend/lib64/
+backend/pycache/
+backend/src/_pycache_/
+backend/src/routers/_pycache_/
+backend/share/
+backend/var/
+backend/venv/
 backend/.env
+frontend/.dart_tool/
+frontend/.idea/
+frontend/.vscode/
+frontend/build/
+frontend/web/
+frontend/linux/
+frontend/windows/
+frontend/macos/
+frontend/ios/
+frontend/android/
+frontend/.env
