--- a/backend/pyvenv.cfg
+++ b/backend/pyvenv.cfg
@@ -1,3 +1,5 @@
 home = /usr/bin
 include-system-site-packages = false
-version = 3.10.16
+version = 3.11.2
+executable = /usr/bin/python3.11
+command = /home/divansh/connections/backend/bin/python -m venv /home/divansh/connections/backend
