--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .env
+
 backend/bin/
 backend/lib/
 backend/include/
@@ -10,6 +11,7 @@ backend/share/
 backend/var/
 backend/venv/
 backend/.env
+
 frontend/.dart_tool/
 frontend/.idea/
 frontend/.vscode/
@@ -22,3 +24,5 @@ frontend/ios/
 frontend/android/
 frontend/.env
 
+.idea
+.DS_Store
