Removed pyvenv.cfg from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,13 @@ backend/include/
 backend/lib64/
 backend/__pycache__/
 backend/pycache/
-backend/lib64/
+backend/lib64
 backend/src/__pycache__/
 backend/src/routers/__pycache__/
 backend/share/
 backend/var/
 backend/venv/
+backend/pyenv.cfg
 backend/.env
 
 frontend/.dart_tool/
