--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -26,6 +26,14 @@ dependencies:
   web_socket_channel: ^2.4.0
   flutter_launcher_icons: ^0.14.3
 
+  # 🔥 New Packages for Chat Enhancements
+  emoji_picker_flutter: ^2.2.0
+  file_picker: ^8.0.5
+  speech_to_text: ^6.6.0
+  permission_handler: ^11.3.1
+  mime: ^1.0.5
+  open_filex: ^4.4.0 # (Optional but recommended for opening attachments)
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
