--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   mime: ^1.0.5
   open_filex: ^4.4.0 # (Optional but recommended for opening attachments)
 
+  collection: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
