added event section to chat, added chat options like info, leave etc and added a function that fetches real time members in the community and fetching user profile is still under progress

--- a/backend/pyvenv.cfg
+++ b/backend/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = /usr/bin
+home = /opt/anaconda3/bin
 include-system-site-packages = false
-version = 3.11.2
-executable = /usr/bin/python3.11
-command = /usr/bin/python -m venv /home/divansh/connections/backend
+version = 3.11.7
+executable = /opt/anaconda3/bin/python3.11
+command = /opt/anaconda3/bin/python -m venv /Users/kanishk/connections-main/backend
